[tool.poetry]
name = "fava-portfolio-returns"
version = "0.1.0"
description = "fava-portfolio-returns shows portfolio returns in Fava"
authors = ["Andreas Gerstmayr []", "Brian Ryall []"]
homepage = 'https://github.com/polarmutex/fava-portfolio-returns'
license = "GPL-2.0"
packages = [
    { include = "fava_portfolio_returns" }
]

[tool.poetry.dependencies]
python = "^3.7"
fava = "^1.14"
beangrow = {git="https://github.com/beancount/beangrow", rev="master"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
