[tool.poetry]
name = "fava-portfolio-returns"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL-2.0"

[tool.poetry.dependencies]
python = "^3.8"
fava = "^1.21"
beangrow = {git = "git@github.com/polarmutex/beangrow.git", rev="polar"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
